--- a/package.json
+++ b/package.json
@@ -12,5 +12,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "posthog-js": "^1.166.0"
+    "@supabase/supabase-js": "^2.47.10"
+
   }
 }
